Create about page

--- a/app/assets/stylesheets/app/layout.sass
+++ b/app/assets/stylesheets/app/layout.sass
@@ -107,5 +107,16 @@ header
     height: 26px
     padding: 9px 13px 0
     background: #ecf2ed
+
+main
+  .content
+    padding: 14px 0 0
+    p
+      font-size: 14px
+      text-align: left
+      margin: 18px 0 20px
+    img
+      margin-left: 15px
+
 footer
   margin-top: $pad
