--- a/app/views/app/web/documents/about.slim
+++ b/app/views/app/web/documents/about.slim
@@ -1,1 +1,26 @@
+.content
+  img src=image_url("chair.jpg") align="right"
+  p
+    |
+      Kilta это классическое финское кресло. Узнаваемый дизайн стула, эргономика
+      и долговечность гарантирует его дальнейший успех. Kilta идеально подходит
+      как для конференц-залов, так и напряженной офисной работы за рабочим
+      столом. Его мягкие, округлые формы придает уют любому помещению. Kilta
+      стул с колесиками было запущен в производство недавно, имеет возможность
+      регулировки по высоте и механизмом качания. Различные вариации обивки
+      обеспечивают универсальные возможности для создания интересного
+      небанального  интерьера. Стул серии Kilta также включает и Мини Kilta -
+      кресло с диском в качестве опоры или базы из четырх ножек. Когда-то
+      кресло Kilta былл первым пластиковым стулом в Финляндии, в силу его
+      новаторской технологии вошел в коллекцию Martela еще в 1955 году.
+  p
+    |
+      Kilta это классическое финское кресло. Узнаваемый дизайн стула, эргономика
+      и долговечность гарантирует его дальнейший успех. Kilta идеально подходит
+      как для конференц-залов, так и напряженной офисной работы за рабочим
+      столом. Его мягкие, округлые формы придает уют любому помещению. Kilta
+      стул с колесиками было запущен в производство недавно, имеет возможность
+      регулировки по высоте и механизмом качания. Различные вариации обивки
+      обеспечивают универсальные возможности для создания интересного
+      небанального интерьера.
 
