--- a/app/assets/stylesheets/app/layout.sass
+++ b/app/assets/stylesheets/app/layout.sass
@@ -111,6 +111,7 @@ header
 main
   .content
     padding: 14px 0 0
+    min-height: 380px
     p
       font-size: 14px
       text-align: left
@@ -119,4 +120,26 @@ main
       margin-left: 15px
 
 footer
-  margin-top: $pad
+  margin-bottom: $pad
+  padding: 40px 0 0
+  font-size: 14px
+  .social_links
+    a
+      float: left
+      img
+        display: block
+    .spacer
+      background: image_url("social_links_spacer.png") center center no-repeat
+      width: 19px
+      height: 50px
+      float: left
+  .links
+    margin-left: 18px
+    float: left
+    a
+      float: left
+    .spacer
+      float: left
+      background: image_url("links_spacer.png") center center no-repeat
+      width: 40px
+      height: 29px
