--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -7,6 +7,7 @@ $text_medium: rgb(132, 166, 191)
 $text_light: white
 
 $bg_main: rgb(211, 177, 166)
+$bg_service: #ecf2ed
 $bg_secondary: rgb(218, 229, 236)
 
 =font-main
@@ -14,7 +15,7 @@ $bg_secondary: rgb(218, 229, 236)
   // text-transform: uppercase
 
 =font-special
-  font-family: 'BirchCTT'
+  font-family: 'BirchCTT-Regular', Helvetica, sans-serif
   line-height: 1.3em
   // text-transform: uppercase
 
