--- a/app/assets/stylesheets/app/_fonts.scss
+++ b/app/assets/stylesheets/app/_fonts.scss
@@ -1,15 +1,18 @@
 @font-face {
-  font-family: 'BirchCTT';
+  font-family: 'BirchCTT-Regular';
+  src: font_url('BirchCTT.eot');
   src: font_url('BirchCTT.eot?#iefix') format('embedded-opentype'),
     font_url('BirchCTT.woff') format('woff'),
-    font_url('BirchCTT.ttf')  format('truetype'),
-    font_url('BirchCTT.svg#BirchCTT') format('svg');
-  font-weight: normal;
+    font_url('BirchCTT.ttf') format('truetype'),
+    font_url('BirchCTT.svg#BirchCTT-Regular') format('svg');
+  font-weight: 400;
   font-style: normal;
+  font-stretch: normal;
+  unicode-range: U+0020-2122;
 }
 
 @font-face {
-  font-family:'HelveticaNeueCyr-Roman';
+  font-family: 'HelveticaNeueCyr-Roman';
   src: font_url('HelveticaNeueCyr-Roman.eot');
   src: font_url('HelveticaNeueCyr-Roman.eot?#iefix') format('embedded-opentype'),
     font_url('HelveticaNeueCyr-Roman.woff') format('woff'),
