--- a/app/views/_shared/_footer.slim
+++ b/app/views/_shared/_footer.slim
@@ -10,8 +10,8 @@ footer
       img src=image_url("social_icon_instagram.png")
 
   .links
-    a href=app_web_document_path("terms_and_conditions")
+    a href=web_document_path("terms_and_conditions")
       = simple_format "Пользовательское\n соглашение", {}, wrapper_tag: "span"
     span.spacer
-    a href=app_web_document_path("privacy_policy")
+    a href=web_document_path("privacy_policy")
       = simple_format "Соглашение о\n конфиденциальности", {}, wrapper_tag: "span"
