--- a/app/views/_shared/_header.slim
+++ b/app/views/_shared/_header.slim
@@ -5,13 +5,13 @@ header
       = t(".title")
 
   .menu
-    a.item href=app_web_document_path("about") О компании
+    a.item href=web_document_path("about") О компании
     span.spacer |
-    a.item href=app_web_document_path("payment_and_delivery") Оплата и доставка
+    a.item href=web_document_path("payment_and_delivery") Оплата и доставка
     span.spacer |
-    a.item href=app_web_document_path("contacts") Контакты
+    a.item href=web_document_path("contacts") Контакты
     span.spacer |
-    a.item href=app_web_document_path("cart")
+    a.item href=web_document_path("cart")
       img src=image_url("cart.png")
       | Корзина (0)
 
