--- a/app/views/web_documents/root.slim
+++ b/app/views/web_documents/root.slim
@@ -18,13 +18,13 @@
         .text = simple_format "Мы дарим надежду,\n Вы обретаете друга..."
 
     .links
-      a href=app_web_document_path("payment_and_delivery")
+      a href=web_document_path("payment_and_delivery")
         | Доставка 3 дня
       span.spacer
-      a href=app_web_document_path("payment_and_delivery")
+      a href=web_document_path("payment_and_delivery")
         | Гарантия
       span.spacer
-      a href=app_web_document_path("payment_and_delivery")
+      a href=web_document_path("payment_and_delivery")
         | Бонус - планировка
 
   .catalog_content
