--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -7,7 +7,7 @@
     list-style: none
     padding: 0
     margin: 0
-    height: 250px
+    // height: 250px
     li
       float: left
       position: relative
