--- a/app/views/_shared/_header.slim
+++ b/app/views/_shared/_header.slim
@@ -5,13 +5,13 @@ header
       = t(".title")
 
   .menu
-    a.item href=web_document_path("about") О компании
+    a.item href=app_document_path("about") О компании
     span.spacer |
-    a.item href=web_document_path("payment_and_delivery") Оплата и доставка
+    a.item href=app_document_path("payment_and_delivery") Оплата и доставка
     span.spacer |
-    a.item href=web_document_path("contacts") Контакты
+    a.item href=app_document_path("contacts") Контакты
     span.spacer |
-    a.item href=web_document_path("cart")
+    a.item href=app_document_path("cart")
       img src=image_url("cart.png")
       | Корзина (0)
 
@@ -23,19 +23,6 @@ header
     a.phone href="tel:+74957754846" +7 (495) 775 48 46
     a.email href="mailto:moscow@mail.ru" moscow@mail.ru
 
-  .catalog_menu
-    a.item href="" Рабочие столы
-    span.spacer |
-    a.item href="" Рабочие кресла
-    span.spacer |
-    a.item href="" Стулья
-    span.spacer |
-    a.item href="" Мягкие группы
-    span.spacer |
-    a.item href="" Шкафы и тумбы
-    span.spacer |
-    a.item href="" Акустические решения
-    span.spacer |
-    a.item href="" Прочее
+  = render "catalog/menu"
 
   = render "_shared/bread_crumbs"
