--- a/app/views/catalog/product_categories/show.js.erb
+++ b/app/views/catalog/product_categories/show.js.erb
@@ -1,13 +1,18 @@
+$form = $("[data-role='catalog_container']").parent().find("form[action*='/catalog/']")
+formAction = $form.attr("action")
+$form.attr("action", formAction.replace(/(page=)\d+/, '$1<%= params[:page].to_i + 1 %>'))
+
 <%
-html = escape_javascript render(
-  partial: "catalog/products/product",
-  collection: Catalog::ProductCategoryDocument.new(params[:path]).all_products(params[:page].to_i)
-)
+if @document.all_products(params[:page].to_i + 1).empty?
+%>
+$form.hide()
+<%
+end
+
+html = escape_javascript render @document.all_products(params[:page].to_i)
 %>
 
 $("[data-role='catalog_container']").append("<%= html %>")
 
-$form = $("[data-role='catalog_container']").parent().find("form[action*='/catalog/']")
-formAction = $form.attr("action")
-$form.attr("action", formAction.replace(/(page=)\d+/, '$1<%= params[:page].to_i + 1 %>'))
+
 
