--- a/app/views/catalog/product_categories/show.slim
+++ b/app/views/catalog/product_categories/show.slim
@@ -1,28 +1,29 @@
-.root
-  .slider
-    .slick-slider data-role="slider"
-      = render partial: "slides/slide",
-               collection: Slide.ordered
+- if @document.at_root?
+  .root
+    .slider
+      .slick-slider data-role="slider"
+        = render partial: "slides/slide",
+                 collection: Slide.ordered
 
-    .links
-      a href=app_document_path("payment_and_delivery")
-        | Доставка 3 дня
-      span.spacer
-      a href=app_document_path("payment_and_delivery")
-        | Гарантия
-      span.spacer
-      a href=app_document_path("payment_and_delivery")
-        | Бонус - планировка
+      .links
+        a href=app_document_path("payment_and_delivery")
+          | Доставка 3 дня
+        span.spacer
+        a href=app_document_path("payment_and_delivery")
+          | Гарантия
+        span.spacer
+        a href=app_document_path("payment_and_delivery")
+          | Бонус - планировка
 
-  .catalog_content
-    ul data-role="catalog_container"
-      = render partial: "catalog/products/product",
-               collection: @product_category_document.all_products
+.catalog_content
+  ul data-role="catalog_container"
+    = render @document.all_products
 
 
-    .clear
+  .clear
+  - if @document.has_more_products?
     = button_to "Смотреть больше предложений",
-      catalog_product_category_path(0, path: @product_category_document.path, page: 1),
+      catalog_product_category_path(0, path: params[:path], page: 1),
       remote: true,
       method: "get",
       class: "more"
