--- a/app/views/_shared/_bread_crumbs.slim
+++ b/app/views/_shared/_bread_crumbs.slim
@@ -2,6 +2,7 @@
   .bread_crumbs
     a href=root_path Главная
     = " / "
-    - @document.breadcrumbs do |name, url|
+    - @document.breadcrumbs.each do |name, url|
       a href=url = name
-    span = @document.name
+      = " / "
+    span = @document.breadcrumb_name
