--- a/app/views/catalog/product_categories/show.slim
+++ b/app/views/catalog/product_categories/show.slim
@@ -15,7 +15,7 @@
         a href=app_document_path("payment_and_delivery")
           | Бонус - планировка
 
-.catalog_content
+.category_content
   ul data-role="catalog_container"
     = render @document.all_products
 
