--- a/app/views/catalog/_menu.slim
+++ b/app/views/catalog/_menu.slim
@@ -1,5 +1,5 @@
 .catalog_menu data-role="catalog_menu"
   = render partial: "catalog/menu_item",
-    collection: ProductCategory.main,
+    collection: ProductCategory.main_with_secondary,
     as: :menu_item,
     spacer_template: "catalog/menu_spacer"
