--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -38,10 +38,22 @@
     font-size: 18px
     height: 38px
     padding: 0px 10px 0
-    margin: 0 0 13px
+    margin: 0 0 9px
     background: $bg_service
     border: none
     &:focus
       outline: none
 
-
+.product_content
+  $pad: 35px
+  margin: 26px 0 40px
+  min-height: 660px
+  & > div
+    float: left
+    // min-height: 660px
+  .catalog_menu
+    width: 215px
+  .gallery
+    width: 358px - $pad
+  .description
+    width: 330px
