--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -10,6 +10,8 @@ $bg_main: rgb(211, 177, 166)
 $bg_service: #ecf2ed
 $bg_secondary: rgb(218, 229, 236)
 
+$main_width: 940px
+
 =font-main
   font-family: 'HelveticaNeueCyr-Roman', Helvetica, sans-serif
   // text-transform: uppercase
