--- a/app/views/catalog/products/_product.slim
+++ b/app/views/catalog/products/_product.slim
@@ -3,6 +3,6 @@
     a href=card.url
       span.title = product.name
       span.picture
-        img src=card.preview_url
+        img src=card.main_preview_url
     span.price = number_to_currency(product.price, precision: 0)
     /руб.
