--- a/app/assets/stylesheets/app/_layout.sass
+++ b/app/assets/stylesheets/app/_layout.sass
@@ -11,7 +11,7 @@ a
     color: $text_medium
 
 main, header, footer
-  width: 940px
+  width: $main_width
   margin: 0 auto
 
 .clear
@@ -143,10 +143,19 @@ main
       margin: 18px 0 20px
     img
       margin-left: 15px
+  section.extra
+    h2
+      height: 26px
+      margin: 0
+      padding: 9px 13px 0
+      background: $bg_service
+      font-size: 16px
+      font-weight: normal
+
 
 footer
   margin-bottom: $pad
-  padding: 40px 0 0
+  padding: 45px 0 0
   font-size: 14px
   height: 48px
   .social_links
