--- a/app/views/catalog/products/show.html.slim
+++ b/app/views/catalog/products/show.html.slim
@@ -1,5 +1,21 @@
 .product_content
   = render "side_menu"
+
+  .gallery
+
+  .description
+
+  .clear
+
+section.extra
+  h2 = t ".product_couples"
+
+  .category_content
+    ul data-role="catalog_container"
+      = render @document.related_products
+
+
+
 / p#notice = notice
 
 / p
