Fix list margin in product

--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -44,6 +44,10 @@
     &:focus
       outline: none
 
+section.extra
+  .category_content ul li
+    margin-bottom: 20px
+
 .product_content
   $pad: 35px
   margin: 26px 0 40px
