Fix product side menu

--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -57,6 +57,16 @@ section.extra
     // min-height: 660px
   .catalog_menu
     width: 215px
+    .wrapper
+      background: image_url("side_menu_border_bg.png") bottom left repeat-x
+      // border-bottom: 2px dashed $text_dark
+      height: 31px
+      &:last-child
+        background: none
+        // border: none
+      a
+        display: block
+        padding: 6px 0 0
   .gallery
     width: 358px - $pad
   .description
