Add sidebar buttons

--- a/app/assets/stylesheets/app/_layout.sass
+++ b/app/assets/stylesheets/app/_layout.sass
@@ -151,7 +151,23 @@ main
       background: $bg_service
       font-size: 16px
       font-weight: normal
-
+  .links
+    $h: 38px
+    font-size: 13px
+    font-weight: bold
+    text-transform: uppercase
+    a
+      $v_pad: 12px
+      display: block
+      color: $text_light
+      text-align: center
+      height: $h - $v_pad
+      min-width: 132px
+      padding: $v_pad 7px 0
+      background: $bg_main
+    .spacer
+      display: block
+      height: 10px
 
 footer
   margin-bottom: $pad
