--- a/app/views/catalog/products/_side_menu.slim
+++ b/app/views/catalog/products/_side_menu.slim
@@ -1,2 +1,4 @@
 .catalog_menu data-role="catalog_menu"
   = render partial: "side_menu_item", collection: @document.subcategories
+
+= render "_shared/links"
