--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -57,6 +57,7 @@ section.extra
     // min-height: 660px
   .catalog_menu
     width: 215px
+    margin: 0 0 30px
     .wrapper
       background: image_url("side_menu_border_bg.png") bottom left repeat-x
       // border-bottom: 2px dashed $text_dark
