--- a/app/views/catalog/product_categories/show.slim
+++ b/app/views/catalog/product_categories/show.slim
@@ -5,15 +5,7 @@
         = render partial: "slides/slide",
                  collection: Slide.ordered
 
-      .links
-        a href=app_document_path("payment_and_delivery")
-          | Доставка 3 дня
-        span.spacer
-        a href=app_document_path("payment_and_delivery")
-          | Гарантия
-        span.spacer
-        a href=app_document_path("payment_and_delivery")
-          | Бонус - планировка
+      = render "_shared/links"
 
 .category_content
   ul data-role="catalog_container"
