Update product page

--- a/app/assets/stylesheets/app/_layout.sass
+++ b/app/assets/stylesheets/app/_layout.sass
@@ -165,6 +165,8 @@ main
       min-width: 132px
       padding: $v_pad 7px 0
       background: $bg_main
+      &:active
+        color: $text_dark
     .spacer
       display: block
       height: 10px
