--- a/app/views/catalog/product_photos/_product_photo.slim
+++ b/app/views/catalog/product_photos/_product_photo.slim
@@ -1,2 +1,2 @@
-li
-  img src=product_photo.src.preview
+li style="background-image: url('#{product_photo.src.preview}');" data-image-url="#{product_photo.src.normal}"
+
