Change product format

--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -133,5 +133,11 @@ section.extra
       &:hover
         color: #635b59
     p
+      .attribute
+        display: inline-block
+        min-width: 160px
+        padding: 0 10px 0 0
+        &.secondary
+          min-width: 120px
 
 
