--- a/app/views/catalog/products/show.html.slim
+++ b/app/views/catalog/products/show.html.slim
@@ -26,7 +26,7 @@
 
       - @document.secondary_properties.each do |attribute_name, attribute|
         p
-          span.attribute = "#{attribute_name}:"
+          span.attribute.secondary = "#{attribute_name}:"
           = attribute
 
       .tail
