--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -13,11 +13,11 @@ $bg_secondary: rgb(218, 229, 236)
 $main_width: 940px
 
 =font-main
-  font-family: 'HelveticaNeueCyr-Roman', Helvetica, sans-serif
+  font-family: "HelveticaNeueCyr-Roman", helveticaneuecyrroman, Helvetica, sans-serif
   // text-transform: uppercase
 
 =font-special
-  font-family: 'BirchCTT-Regular', Helvetica, sans-serif
+  font-family: "BirchCTT-Regular", birchcttnormal, Helvetica, sans-serif
   line-height: 1.3em
   // text-transform: uppercase
 
