--- a/app/assets/stylesheets/app/_layout.sass
+++ b/app/assets/stylesheets/app/_layout.sass
@@ -163,14 +163,11 @@ main
       color: $text_light
       text-align: center
       height: $h - $v_pad
-      min-width: 130px
       padding: $v_pad 7px 0
+      margin-bottom: 10px
       background: $bg_main
       &:active
         color: $text_dark
-    .spacer
-      display: block
-      height: 10px
 
 footer
   margin-bottom: $pad
