--- a/app/views/_shared/_links.slim
+++ b/app/views/_shared/_links.slim
@@ -1,9 +1,8 @@
 .links
   a href=app_document_path("payment_and_delivery")
     | Доставка 3 дня
-  span.spacer
-  a href=app_document_path("payment_and_delivery")
+  /! There is a correction of button position
+  a.mid href=app_document_path("payment_and_delivery") style="right: 44px"
     | Гарантия
-  span.spacer
   a href=app_document_path("payment_and_delivery")
     | Бонус - планировка
