Setup upmin stuff

--- a/app/assets/stylesheets/app/root.sass
+++ b/app/assets/stylesheets/app/root.sass
@@ -4,6 +4,8 @@
   .slider
     padding-bottom: 1px
     overflow: hidden
+    .slick-slide
+      width: 940px
   $dots_h: 35px
   $h: 286px
   .slick-slider
