Fix fonts and ck

--- a/app/assets/stylesheets/app/_layout.sass
+++ b/app/assets/stylesheets/app/_layout.sass
@@ -153,12 +153,13 @@ main
       font-size: 16px
       font-weight: normal
   .links
+    +font-main-bold
     $h: 38px
     font-size: 13px
     font-weight: bold
     text-transform: uppercase
     a
-      $v_pad: 12px
+      $v_pad: 13px
       display: block
       color: $text_light
       text-align: center
