--- a/app/assets/stylesheets/app/catalog.sass
+++ b/app/assets/stylesheets/app/catalog.sass
@@ -32,6 +32,7 @@
           display: block
           margin: 0 auto
       .price
+        +font-main-medium
         font-weight: bold
   .more
     display: inline-block
@@ -123,7 +124,7 @@ section.extra
       float: left
       padding: 6px 0 0
     a.add_to_cart
-      $v_pad: 10px
+      $v_pad: 11px
       float: right
       height: 38px - $v_pad
       padding: $v_pad 15px 0
