--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -14,12 +14,16 @@ $main_width: 940px
 
 =font-main
   font-family: "HelveticaNeueCyr-Roman", helveticaneuecyrroman, Helvetica, sans-serif
-  // text-transform: uppercase
+
+=font-main-bold
+  font-family: "HelveticaNeueCyr-Bold", helveticaneuecyrbold, Helvetica, sans-serif
+
+=font-main-medium
+  font-family: "HelveticaNeueCyr-Medium", helveticaneuecyrmedium, Helvetica, sans-serif
 
 =font-special
   font-family: "BirchCTT-Regular", birchcttnormal, Helvetica, sans-serif
   line-height: 1.3em
-  // text-transform: uppercase
 
 
 // =dimensions_h($height, $pad_v: 0, $pad_h: 0)
