--- a/app/assets/stylesheets/app/_fonts.scss
+++ b/app/assets/stylesheets/app/_fonts.scss
@@ -1,51 +1,53 @@
-// @font-face {
-//   font-family: 'BirchCTT-Regular';
-//   src: font_url('BirchCTT.eot');
-//   src: font_url('BirchCTT.eot?#iefix') format('embedded-opentype'),
-//     font_url('BirchCTT.woff') format('woff'),
-//     font_url('BirchCTT.ttf') format('truetype'),
-//     font_url('BirchCTT.svg#BirchCTT-Regular') format('svg');
-//   font-weight: 400;
-//   font-style: normal;
-//   font-stretch: normal;
-//   unicode-range: U+0020-2122;
-// }
-
 @font-face {
     font-family: 'birchcttnormal';
     src: font_url('birchctt-webfont.eot');
     src: font_url('birchctt-webfont.eot?#iefix') format('embedded-opentype'),
+         font_url('birchctt-webfont.svg#birchcttnormal') format('svg'),
          font_url('birchctt-webfont.woff2') format('woff2'),
          font_url('birchctt-webfont.woff') format('woff'),
-         font_url('birchctt-webfont.ttf') format('truetype'),
-         font_url('birchctt-webfont.svg#birchcttnormal') format('svg');
+         font_url('birchctt-webfont.ttf') format('truetype')
+         ;
     font-weight: normal;
     font-style: normal;
 
 }
 
-// @font-face {
-//   font-family: 'HelveticaNeueCyr-Roman';
-//   src: font_url('HelveticaNeueCyr-Roman.eot');
-//   src: font_url('HelveticaNeueCyr-Roman.eot?#iefix') format('embedded-opentype'),
-//     font_url('HelveticaNeueCyr-Roman.woff') format('woff'),
-//     font_url('HelveticaNeueCyr-Roman.ttf') format('truetype'),
-//     font_url('HelveticaNeueCyr-Roman.svg#HelveticaNeueCyr-Roman') format('svg');
-//   font-weight: 400;
-//   font-style: normal;
-//   font-stretch: normal;
-//   unicode-range: U+0020-E001;
-// }
-
 @font-face {
     font-family: 'helveticaneuecyrroman';
     src: font_url('helveticaneuecyr-roman-webfont.eot');
     src: font_url('helveticaneuecyr-roman-webfont.eot?#iefix') format('embedded-opentype'),
+         font_url('helveticaneuecyr-roman-webfont.svg#helveticaneuecyrroman') format('svg'),
          font_url('helveticaneuecyr-roman-webfont.woff2') format('woff2'),
          font_url('helveticaneuecyr-roman-webfont.woff') format('woff'),
          font_url('helveticaneuecyr-roman-webfont.ttf') format('truetype'),
-         font_url('helveticaneuecyr-roman-webfont.svg#helveticaneuecyrroman') format('svg');
+         ;
+    // font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'helveticaneuecyrbold';
+    src: font_url('helveticaneuecyr-bold-webfont.eot');
+    src: font_url('helveticaneuecyr-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         font_url('helveticaneuecyr-bold-webfont.svg#helveticaneuecyrbold') format('svg'),
+         font_url('helveticaneuecyr-bold-webfont.woff2') format('woff2'),
+         font_url('helveticaneuecyr-bold-webfont.woff') format('woff'),
+         font_url('helveticaneuecyr-bold-webfont.ttf') format('truetype'),
+         ;
     font-weight: normal;
     font-style: normal;
 
+}
+
+@font-face {
+    font-family: 'helveticaneuecyrmedium';
+    src: font_url('helveticaneuecyr-medium-webfont.eot');
+    src: font_url('helveticaneuecyr-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         font_url('helveticaneuecyr-medium-webfont.svg#helveticaneuecyrmedium') format('svg'),
+         font_url('helveticaneuecyr-medium-webfont.woff2') format('woff2'),
+         font_url('helveticaneuecyr-medium-webfont.woff') format('woff'),
+         font_url('helveticaneuecyr-medium-webfont.ttf') format('truetype'),
+         ;
+    // font-weight: normal;
+    font-style: normal;
 }
