--- a/app/views/upmin/partials/associations/_associations.slim
+++ b/app/views/upmin/partials/associations/_associations.slim
@@ -1,19 +1,26 @@
-h5
-  = association.title
+- unless model.respond_to?(:parent_association?) && model.parent_association?(association)
+  .panel.panel-default
+    .panel-heading
+      .panel-title
+        = association.title
+        '
+        | (#{association.value.count})
 
-- if association.collection?
-  p
-    a.btn.btn-success href=upmin_new_model_path(klass: association.name.to_s.classify)
-      span.glyphicon.glyphicon-plus
-      '
-      | Добавить
+        - if association.collection?
+          a.btn.btn-xs.btn-link.pull-right href=upmin_new_model_path(klass: association.name.to_s.classify, parent_id: model.id)
+            i.fa.fa-plus
+            '
+            | Добавить
 
-- if association.empty?
-  p.well
-    | Нет
+    .panel-body
 
-- else
-  - association.upmin_values.each do |m|
-    a.active-tag-link href=m.path
-      span.label class=m.color
-        = m.respond_to?(:name) ? m.name : m.title
+      - if association.empty?
+        p
+          | Нет
+
+      - else
+        - association.upmin_values(limit: 30).each do |m|
+          a.active-tag-link href=m.path
+            span.label class=m.color
+              = m.respond_to?(:name) ? m.name : m.title
+
