--- a/app/views/upmin/models/show.slim
+++ b/app/views/upmin/models/show.slim
@@ -1,21 +1,32 @@
 .container
   - if notice
     .alert.alert-dismissable.alert-info
-      %button.close{"data-dismiss" => "alert", type: "button"}
-        %span{"aria-hidden" => "true"} &times;
+      i.fa.fa-info-circle.fa-lg.fa-li
+      '
+      button.close data-dismiss="alert" type="button"
+        span aria-hidden="true" &times;
+
       = notice
+      '
+      = link_to_new_model
+
   - if alert
     .alert.alert-dismissable.alert-danger
-      %button.close{"data-dismiss" => "alert", type: "button"}
-        %span{"aria-hidden" => "true"} &times;
+      i.fa.fa-warning
+      '
+      button.close data-dismiss="alert" type="button"
+        span aria-hidden="true" &times;
+
       = alert
+
       - if @model.errors.any?
-        %ul
+        ul
           - @model.errors.each do |field, error|
-            %li
-              %b
+            li
+              b
                 = @model.model_class.human_attribute_name(field)
               = error
+
   .row
     .col-sm-12
       = up_render(@model)
